# portfolio_manager

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  pyproject.toml
.github/workflows/: daily_report.yml
config/: portfolio.yml
src/portfolio_manager/: __main__.py  main.py
src/portfolio_manager/analytics/: ledger.py  performance.py  rebalancing.py
src/portfolio_manager/api/: client.py  market_data.py  positions.py
src/portfolio_manager/core/: config.py  types.py
src/portfolio_manager/reporting/: email_sender.py  renderer.py
src/portfolio_manager/reporting/templates/: report.html.j2
tests/: test_config.py  test_email_sender.py  test_ledger.py  test_market_data.py  test_performance.py  test_positions.py  test_rebalancing.py  test_renderer.py
